bloonix-agent (0.48) released at 2015-01-27

    * Fixed permissions of bloonix-agent.log.

bloonix-agent (0.47) released at 2015-01-26

    * Fixed: Can't call method "notice" on an undefined value
      at /usr/share/perl5/Bloonix/Agent.pm line 81

bloonix-agent (0.46) released at 2015-01-26

    * Fixed creation of bloonix-agent.log.

bloonix-agent (0.45) released at 2014-12-23

    * Fixed reload function.

bloonix-agent (0.44) released at 2014-12-23

    * Improved data handling.

bloonix-agent (0.43) released at 2014-12-23

    * Fixed VERSION in Worker.pm.
    * Fixed nagios/simple plugin handling.

bloonix-agent (0.42) released at 2014-12-23

    * Added parameter poll_interval. The default is 60s.

bloonix-agent (0.41) released at 2014-12-17

    * Improved the communication stack between parent and children.
    * Improved the check distribution to children.
    * Replaced the keyword "nagios" with "simple".

bloonix-agent (0.40) released at 2014-12-11

    * Fixed the benchmark functions.

bloonix-agent (0.39) released at 2014-12-03

    * Fixed parsing nagios argument list.

bloonix-agent (0.38) released at 2014-12-03

    * Kicked debug messages.
    * Log command and arguments of nagios with log level info.

bloonix-agent (0.37) released at 2014-11-30

    * Changed the boot facility.
    * Fixed sudo mapping for services.

bloonix-agent (0.36) released at 2014-11-16

    * Added use_sudo as global configuration parameter for the agent.
    * Fixed owner of all directories and files within /etc/bloonix.

bloonix-agent (0.35) released at 2014-11-08

    * Decreased the poll interval from 20 to 15 seconds because the
      the lowest interval of check_frequency=high is 15 seconds.

bloonix-agent (0.34) released at 2014-11-05

    * Increased the default timeout for checks from 30 to 60 seconds.

bloonix-agent (0.33) released at 2014-11-05

    * Fixed the init script and removed S20 or any other
      prefix from basename.
