@@ -1,3 +1,8 @@
+bloonix-agent (0.48) released at 2015-XX-XX
+
+    * Improved parsing of nagios statistics.
+    * Fixed uninizialied value host_id in get_services().
+
 bloonix-agent (0.48) released at 2015-01-27
 
     * Fixed permissions of bloonix-agent.log.
